--- a/src/pages/goals.html
+++ b/src/pages/goals.html
@@ -9,7 +9,7 @@
         <h1>멋진 사자로 성장하고 싶은 '오서현'입니다!🦁</h1>
         <nav>
             <ul>
-                <li><a href="../../index.html">About me</a></li>
+                <li><a href="../index.html">About me</a></li>
                 <li><a href="./hobby.html">Hobby</a></li>
                 <li><a href="./goals.html">Goals</a></li>
             </ul>
