--- a/src/pages/hobby.html
+++ b/src/pages/hobby.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>[202101553] 오서현 | Hobby</title>
+    <link href="../assets/styles/hobby.css">
 </head>
 
 <body class="hobby">
     <header>
-        <h1>멋진 사자로 성장하고 싶은 '오서현'입니다!🦁</h1>
-        <nav>
+        <nav class="navbar">
+            <img src="./assets/images/logo.svg" alt="Logo" class="logo">
             <ul>
-                <li><a href="../index.html">About me</a></li>
-                <li><a href="./hobby.html">Hobby</a></li>
-                <li><a href="./goals.html">Goals</a></li>
+                <li><a href="index.html" class="active">About me</a></li>
+                <li><a href="./pages/hobby.html">Hobby</a></li>
+                <li><a href="./pages/goals.html">Goals</a></li>
             </ul>
         </nav>
     </header>   
