--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,9 @@
     <title>[202101553] 오서현 | About me</title>
     <script src="https://kit.fontawesome.com/bea33cf08c.js" crossorigin="anonymous"></script>
     <link href="./assets/styles/index.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body class="index">
     <header>
@@ -18,37 +21,37 @@
         </nav>
     </header>
 
-    <main class="About">
-          <section aria-labelledby="About-title">
-            <div  class="About__wrapper">
-              <figure class="About__wrapper_top">
+    <main class="about">
+          <section aria-labelledby="about-title">
+            <div  class="about__wrapper">
+              <figure class="about__wrapper_top">
                 <h1>멋진 사자로 성장하고 싶은 '오서현'입니다!🦁</h1>
-                <h2 id="About-title">자기소개</h2>
+                <h2 id="about-title">about me</h2>
               </figure>
-              <figure class="About__wrapper_bottom">
-                <figure class="About__wrapper_left">
-                    <img src="./pages/images/about.png" alt="서현 사진" class="Myimage">
+              <figure class="about__wrapper_bottom">
+                <figure class="about__wrapper_left">
+                    <img src="./pages/images/about.png" alt="서현 사진" class="myImage">
                 </figure>
-                <figure class="About__wrapper_right">
-                    <p>안녕하세요 멋쟁이사자처럼 12기 프론트앤드 분야로 들어온 경영학부 21학번 오서현입니다.<br>
-                    제 꿈은 PM(Product Manager)입니다. 사람들이 필요로 하는 서비스, 제품을 만들어보고 싶습니다.<br>
-                    또 저는 비전공자로, 프론트엔드 분야를 이번에 처음으로 몰입해서 배워보는데요. 늦게 시작한 만큼 누구보다 열심히 노력하겠습니다! <br>
-                    함께 성장하는 한 해를 만들어 가고 싶습니다!</p>
+                <figure class="about__wrapper_right">
+                    <p class="background">안녕하세요 멋쟁이사자처럼 12기 <strong>프론트앤드</strong> 분야로 들어온 <br>
+                        <strong>경영학부 21학번 오서현</strong>입니다! 제 꿈은 <strong>PM(Product Manager)</strong>입니다.<br> 사람들이 필요로 하는 서비스, 제품을 만들어보고 싶습니다.<br>
+                        프론트엔드 분야를 이번에 처음으로 몰입해서 배워보지만 <br>늦게 시작한 만큼 누구보다 열심히 노력하겠습니다! <br>함께 성장하는 한 해를 만들어 가고 싶습니다! 잘 부탁드려요!</p>
                     <div class="profile">
                         <p class="profile__detail"><i class="fa-regular fa-face-laugh"></i> 오서현</p>
                         <p class="profile__detail"><i class="fa-solid fa-star"></i> MBTI: INFP/ENFP</p>
                         <p class="profile__detail"><i class="fa-solid fa-phone"></i> 010-4701-1542</p>
-                        <p class="profile__detail"><i class="fa-solid fa-envelope"></i> skibb2@naver.com</p>
+                        <p class="profile__detail"><i class="fa-solid fa-heart"></i> 성장, 소통, 협업, 편안한 분위기</p>
                         <p class="profile__detail">
-                            <i class="fa-brands fa-instagram"></i>
-                            <a href="https://www.instagram.com/oyamuring/" target="_blank" rel="noopener noreferrer">@oyamuring</a>
-                        </p>
-                        <p class="profile__detail">
+                            <!-- <i class="fa-brands fa-instagram"></i> -->
+                            
+                            <a href="https://www.instagram.com/oyamuring/" target="_blank" rel="noopener noreferrer"> <img src="./assets/images/instagram.svg" alt="인스타로고"></a>
+                            <a href="mailto:skibb27@gmail.com" target="_blank" rel="noopener noreferrer"> <img src="./assets/images/gmail.svg" alt="gmail로고"></a>
+                       </p>
+                            <!-- <p class="profile__detail">
                             <i class="fa-solid fa-blog"></i>
                             <a href="https://blog.naver.com/skibb2" target="_blank" rel="noopener noreferrer">naver</a>
-                            | <a href="https://oyamuring.tistory.com/" target="_blank" rel="noopener noreferrer">tstroy</a>
-                        </p>
-                        <p><i class="fa-solid fa-heart"></i> 성장, 소통, 협업, 편안한 분위기</p>
+                            | <a href="https://oyamuring.tistory.com/" target="_blank" rel="noopener noreferrer">tstroy</a> </p>s -->
+                        
                     </div>
                 </figure>
               </figure>
