css 이미지 요소 임포트

--- a/src/pages/goals.html
+++ b/src/pages/goals.html
@@ -3,36 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <title>[202101553] 오서현 | Goals</title>
+    <link href="../assets/styles/goals.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h1>멋진 사자로 성장하고 싶은 '오서현'입니다!🦁</h1>
-        <nav>
+        <nav class="navbar">
+            <img src="../assets/images/logo.svg" alt="Logo" class="logo">
             <ul>
                 <li><a href="../index.html">About me</a></li>
                 <li><a href="./hobby.html">Hobby</a></li>
-                <li><a href="./goals.html">Goals</a></li>
+                <li><a href="./goals.html" class="active">Goals</a></li>
             </ul>
         </nav>
     </header>
     
     <main>
-        <section class="Goals">
-            <h2>목표 1 : 멋사 12기 수료</h2>
-            <p>멋사를 통한 배움과 다양한 기회들을 포기하지 않고, 적극적으로 참여하여 수료하는 것이 목표입니다!</p>
-        </section>
+        <div class="goals_wrapper">
+            <h1>Goals</h1>
+            <div class="goals_item_wrapper">
+            <section class="goals">
+                <h2>목표 1 : 멋사 12기 수료</h2>
+                <p>멋사를 통한 배움과 다양한 기회들을 포기하지 않고 <strong>적극적으로 참여하여 수료하는 것</strong>이 목표입니다!</p>
+            </section>
 
-        <section class="Goals">
-            <h2>목표 2 : 코딩 실력 향상</h2>
-            <p>코딩 실력 향상을 위해, 매 주 10시간 이상 코딩학습에 시간을 할애 할 것입니다.<br>
-                 단기 목표로는 HTML, CSS, JS를 자유자제로 사용하는 것입니다.<br>
-                 장기 목표는 리액트 프레임워크를 배워 배포해 보는 경험을 갖는 것입니다.</p>
-        </section>
+            <section class="goals">
+                <h2>목표 2 : 코딩 실력 향상</h2>
+                <p>코딩 <strong>실력향상</strong>을 위해, 매 주 <strong>10시간 이상</strong> 코딩학습에 시간을 할애 하겠습니다.
+                    <strong>단기 목표</strong>로는 HTML, CSS, JS를 자유자제로 사용하는 것입니다.
+                    <strong>장기 목표</strong>로는 리액트 프레임워크를 배워 배포해 보는 경험을 갖는 것입니다.</p>
+            </section>
 
-        <section class="Goals">
-            <h2>목표 3 : 다양한 협업 기회를 통한 수상</h2>
-            <p>다양한 사람들과 협업을 하고 제 스스로 성장하여 대회에 나가고 싶고, 직접 만든 웹으로 상을 받는 것이 목표입니다!</p>
-        </section>
+            <section class="goals">
+                <h2>목표 3 : 다양한 협업 참여</h2>
+                <p><strong>다양한 동아리원분들과 협업을</strong>하여<br>소프트 스킬을 업그레이드 할 것입니다. 또한 스스로 성장하여 대회에 나가 직접 만든 웹으로 상을 받고싶습니다!</p>
+            </section>
+        </div>
+        </div>
     </main>
 </body>
 </html>
