--- a/src/pages/hobby.html
+++ b/src/pages/hobby.html
@@ -3,23 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>[202101553] 오서현 | Hobby</title>
-    <link href="../assets/styles/hobby.css">
+    <link href="../assets/styles/hobby.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 
 <body class="hobby">
     <header>
         <nav class="navbar">
-            <img src="./assets/images/logo.svg" alt="Logo" class="logo">
+            <img src="../assets/images/logo.svg" alt="Logo" class="logo">
             <ul>
-                <li><a href="index.html" class="active">About me</a></li>
-                <li><a href="./pages/hobby.html">Hobby</a></li>
-                <li><a href="./pages/goals.html">Goals</a></li>
+                <li><a href="../index.html">About me</a></li>
+                <li><a href="./hobby.html" class="active">Hobby</a></li>
+                <li><a href="./goals.html">Goals</a></li>
             </ul>
         </nav>
     </header>   
     <main>
-        <section aria-labelledby="hobbies-title">
-            <h2 id="hobbies-title">취미</h2>
+        <h2 id="hobbies-title" aria-labelledby="hobbies-title">취미</h2>
+        <section class="hobbies-section">
             <div class="hobbies__wrapper">
                 <article class="hobby__item">
                     <div class="hobby__image">
