docs/README.md 파일 삭제

--- a/src/pages/hobby.html
+++ b/src/pages/hobby.html
@@ -29,7 +29,7 @@
                     </div>
                     <div class="hobby__content">
                         <h3>음악</h3>
-                        <p>인디 장르의 음악 감상을 자주 하며, 콘서트장을 놀러가는 것을 좋아해요!!</p>
+                        <p>인디 장르의 음악을 좋아하고 콘서트장을 놀러가는 것을 좋아해요!!</p>
                     </div>
                 </article>
 
